2009-08-09 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/assubr.c: moved and mergerd from as/mcs51/assubr.c
	  as/hc08/assubr.c, as/mcs51/assubr.c, as/z80/assubr.c: deleted
	  as/hc08/asmain.c, as/mcs51/asmain.c: removed variable fatalError
	* as/z80/as_gbz80.dsp, as/hc08/as_hc08.dsp,
	  as/z80/as_z80.dsp, as/mcs51/asx8051.dsp: assubr.c moved to as/asxxsrc
	* as/hc08/Makefile.as_hc08, as/mcs51/Makefile.asx8051,
	  as/hc08/Makefile.bcc, as/link/hc08/Makefile.bcc,
	  as/link/mcs51/Makefile.bcc, as/mcs51/Makefile.bcc,
	  as/z80/Makefile.bcc, device/examples/ds390/tinitalk/Makefile.bcc,
	  Makefile.bcc, src/avr/Makefile.bcc, src/ds390/Makefile.bcc,
	  src/hc08/Makefile.bcc, src/izt/Makefile.bcc, src/Makefile.bcc,
	  src/mcs51/Makefile.bcc, src/pic16/Makefile.bcc, src/pic/Makefile.bcc,
	  src/xa51/Makefile.bcc, src/z80/Makefile.bcc, Bcc.inc
	  support/cpp/Makefile.bcc, support/librarian/Makefile.bcc,
	  support/packihx/Makefile.bcc: removed unmaintained makefiles,
	  implemented RFE #2786753: Remove Borland C support
	* support/Util/dbuf_string.h: include stdio.h

2009-08-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/pic16/libc/Makefile.in,
	* device/lib/pic16/libdev/Makefile.in,
	* device/lib/pic16/libio/Makefile.in,
	* device/lib/pic16/libm/Makefile.in,
	* device/lib/pic16/libsdcc/Makefile.in,
	* device/lib/pic16/startup/Makefile.in,
	* device/lib/pic16/Makefile.common,
	* device/lib/pic16/Makefile.in,
	* src/hc08/main.c (_hc08_setDefaultOptions),
	* src/pic16/gen.c (genFunction, genEndFunction),
	* src/pic16/NOTES,
	* src/SDCCglobl.h,
	* src/SDCCmain.c,
	* src/z80/gen.c (genFunction),
	* doc/sdccman.lyx: changed ommitFramePtr to omitFramePtr
	* src/mcs51/main.c (_mcs51_finaliseOptions),
	* src/SDCCmain.c (parseCmdLine): moved mcs51 specific code for float_rent
	* src/SDCCast.h,
	* src/SDCCast.c (decorateType): removed incorrect fix for bug 1372851 which
	   caused bug 1458678
	  (CodePtrPointsToConst),
	* src/SDCCicode.c (isOperandVolatile),