@@ -400,7 +400,7 @@ main(int argc, char *argv[])
         if (lflag) {
                 lstsym(lfp);
         }
-	asexit(aserr);
+	asexit(aserr != 0);
         return 0; // hush the compiler
 }
 
